--- a/index.ipynb
+++ b/index.ipynb
@@ -2,13 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "# Part one\n",
+    "## Prerequisites and materials\n",
     "\n",
-    "Open [Part one](./notebooks/Part_1.ipynb)."
+    "Through out this assignment you will be exposed to several python libraries:\n",
+    "\n",
+    "1. [NumPy](https://docs.scipy.org/doc/numpy-1.16.1/user/index.html) - the fundamental package for scientific computing with Python.\n",
+    "2. [Matplotlib](https://matplotlib.org/) - 2D plotting library in Python and provides interface similar to MATLAB.\n",
+    "3. [HOTTBOX](https://hottbox.github.io/stable/index.html) - the toolbox for multilinear analysis and tensor decompositions. Build on top of NumPy.\n",
+    "\n",
+    "Although, most of the tasks come with relevant code snippets and examples, you are encouraged to spend time to get familiar with these libraries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Instructions and general guidlines\n",
+    "\n",
+    "1. Complete assignments\n",
+    "2. Completing assignments within multiple sessions.\n",
+    "3. Export and submit results: downloading notebook or converting to pdf, html etc.\n",
+    "\n",
+    "\n",
+    "> IMPORTANT: Before submittion `.ipynb` file make sure that all cells have been sequentially executed from the very first one."
    ]
   },
   {
@@ -17,8 +35,13 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "# Part two\n",
-    "Open [Part two](./notebooks/Part_2.ipynb)."
+    "## Assignments\n",
+    "### Module 1: Tensors and basic operations\n",
+    "Open [notebook](./notebooks/Tensors_and_basic_operations.ipynb) with materials and assignments for this module.\n",
+    "\n",
+    "### Module 2: Part two\n",
+    "\n",
+    "Open [notebook](./notebooks/Part_2.ipynb) with materials and assignments for this module."
    ]
   },
   {
