Minor reorganisation and changes to README

--- a/notebooks/0_Table_of_contents.ipynb
+++ b/notebooks/0_Table_of_contents.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc-hr-collapsed": false
+   },
+   "source": [
+    "# Table of Contents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Prerequisites and materials\n",
@@ -17,7 +26,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
     "## Instructions and general guidlines\n",
     "\n",
@@ -26,7 +37,20 @@
     "3. Export and submit results: downloading notebook or converting to pdf, html etc.\n",
     "\n",
     "\n",
-    "> IMPORTANT: Before submittion `.ipynb` file make sure that all cells have been sequentially executed from the very first one."
+    "> **IMPORTANT:** Before submittion `.ipynb` file make sure that all cells have been sequentially executed from the very first one."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc-hr-collapsed": false
+   },
+   "source": [
+    "## Assignments\n",
+    "\n",
+    "### [Module 1: Tensors and basic operations](./1_Tensors_and_basic_operations.ipynb)\n",
+    "\n",
+    "### [Module 2: Part two](./2_Part_2.ipynb)\n"
    ]
   },
   {
@@ -35,21 +59,10 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "## Assignments\n",
-    "### Module 1: Tensors and basic operations\n",
-    "Open [notebook](./notebooks/Tensors_and_basic_operations.ipynb) with materials and assignments for this module.\n",
+    "## Reporting problems and issues\n",
     "\n",
-    "### Module 2: Part two\n",
-    "\n",
-    "Open [notebook](./notebooks/Part_2.ipynb) with materials and assignments for this module."
+    "Please use one of [these forms](https://github.com/IlyaKisil/dpm-coursework/issues/new/choose) which supports `markdown` text formatting. It would also be helpful if you include as much relevant info as possible. This could include screenshots, code snippets etc.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
