--- a/notebooks/1_Tensors_and_basic_operations.ipynb
+++ b/notebooks/1_Tensors_and_basic_operations.ipynb
@@ -28,7 +28,7 @@
     "toc-hr-collapsed": false
    },
    "source": [
-    "[Return to Table of Contents](../index.ipynb)"
+    "[Return to Table of Contents](./0_Table_of_contents.ipynb)"
    ]
   },
   {
