--- a/notebooks/2_Part_2.ipynb
+++ b/notebooks/2_Part_2.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "# Part two\n",
     "\n",
-    "[Return to home](../index.ipynb)"
+    "[Return to home](./0_Table_of_contents.ipynb)"
    ]
   },
   {
@@ -26,6 +26,16 @@
    "outputs": [],
    "source": [
     "from coursework.aspmi import two, three\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Kruskal tensor\n",
+    "## Tucker Tensor\n",
+    "## Tensor train"
    ]
   },
   {
