WIP: Guidelines and instructions

--- a/notebooks/0_Table_of_contents.ipynb
+++ b/notebooks/0_Table_of_contents.ipynb
@@ -27,17 +27,52 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "toc-hr-collapsed": false
+   },
+   "source": [
+    "# Instructions and general guidlines\n",
+    "\n",
+    "## Before completing assignments\n",
+    "It is strongly advised to prepend your Imperial ID to the filenames of notebooks with assignments. For example, if your Imperial ID is `abc123` and you want to complete assignments specified in `File_1.ipynb` then the new filename should be `abc123_File_1.ipynb`. We recommend to duplicated an existing file and then rename it.\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "toc-hr-collapsed": true
    },
    "source": [
-    "## Instructions and general guidlines\n",
+    "## Completing assignments within multiple binder sessions.\n",
     "\n",
-    "1. Complete assignments\n",
-    "2. Completing assignments within multiple sessions.\n",
-    "3. Export and submit results: downloading notebook or converting to pdf, html etc.\n",
+    "1. Before closing binder session make sure that you have downloaded notebook on which you have been working on. This is very important, otherwise your progress will be completely lost without any chance of restroing it.\n",
+    "\n",
+    "    <img src=\"./imgs/notebook_download.png\" alt=\"Drawing\" style=\"width: 400px;\" id=\"notebook_download\"/>\n",
+    "\n",
+    "2. When you connect to binder for the second/other time, you will need to upload you notebook which you had previously downloaded (see step 1). In order to do that, just drag and drop you notebook, into the file browser, as shown on image below\n",
+    "\n",
+    "    <img src=\"./imgs/notebook_upload.png\" alt=\"Drawing\" style=\"width: 400px;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
+   "source": [
+    "## Exporting and submiting results\n",
+    "\n",
+    "Before submission of `*.ipynb` file (and conversion to html), make sure that all cells have been sequentially executed from the very first one. You are required to submit:\n",
+    "\n",
+    "1. **Interactive** version of the notebooks, i.e. files with `*.ipynb` extension. \n",
+    "\n",
+    "    - If you opted for completing assignemts on `binder`, then you would need to download the final version of the notebook (see [screenshot](#notebook_download) above) and include that file in submission.    \n",
+    "    - If you opted for completing assignments on you own PC, then no download is required and you can include your local file in submission.\n",
     "\n",
     "\n",
-    "> **IMPORTANT:** Before submittion `.ipynb` file make sure that all cells have been sequentially executed from the very first one."
+    "2. **Static** version of the notebook, i.e. files with `*.html` extension. Regardless of how you completed assignments (on binder or on your own PC), you need to export notebook as `html` file and include that file in submission.\n",
+    "\n",
+    "    <img src=\"./imgs/notebook_export_to_html.png\" alt=\"Drawing\" style=\"width: 1200px;\"/>"
    ]
   },
   {
@@ -56,13 +91,20 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": true
+    "toc-hr-collapsed": false
    },
    "source": [
-    "## Reporting problems and issues\n",
+    "# Reporting problems and issues\n",
     "\n",
-    "Please use one of [these forms](https://github.com/IlyaKisil/dpm-coursework/issues/new/choose) which supports `markdown` text formatting. It would also be helpful if you include as much relevant info as possible. This could include screenshots, code snippets etc.\n"
+    "Please use one of [these forms](https://github.com/IlyaKisil/dpm-coursework/issues/new/choose) which supports [markdown](https://guides.github.com/features/mastering-markdown/) text formatting. It would also be helpful if you include as much relevant info as possible. This could include screenshots, code snippets etc.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
