Added Module 2 of the coursework and extended guidelines

--- a/notebooks/0_Table_of_contents.ipynb
+++ b/notebooks/0_Table_of_contents.ipynb
@@ -47,11 +47,11 @@
     "\n",
     "1. Before closing binder session make sure that you have downloaded notebook on which you have been working on. This is very important, otherwise your progress will be completely lost without any chance of restroing it.\n",
     "\n",
-    "    <img src=\"./imgs/notebook_download.png\" alt=\"Drawing\" style=\"width: 400px;\" id=\"notebook_download\"/>\n",
+    "<img src=\"./imgs/notebook_download.png\" alt=\"Drawing\" style=\"width: 400px;\" id=\"notebook_download\"/>\n",
     "\n",
     "2. When you connect to binder for the second/other time, you will need to upload you notebook which you had previously downloaded (see step 1). In order to do that, just drag and drop you notebook, into the file browser, as shown on image below\n",
     "\n",
-    "    <img src=\"./imgs/notebook_upload.png\" alt=\"Drawing\" style=\"width: 400px;\"/>"
+    "<img src=\"./imgs/notebook_upload.png\" alt=\"Drawing\" style=\"width: 400px;\"/>\n"
    ]
   },
   {
@@ -72,7 +72,7 @@
     "\n",
     "2. **Static** version of the notebook, i.e. files with `*.html` extension. Regardless of how you completed assignments (on binder or on your own PC), you need to export notebook as `html` file and include that file in submission.\n",
     "\n",
-    "    <img src=\"./imgs/notebook_export_to_html.png\" alt=\"Drawing\" style=\"width: 1200px;\"/>"
+    "<img src=\"./imgs/notebook_export_to_html.png\" alt=\"Drawing\" style=\"width: 1000px;\"/>\n"
    ]
   },
   {
@@ -85,7 +85,9 @@
     "\n",
     "### [Module 1: Tensors and basic operations](./1_Tensors_and_basic_operations.ipynb)\n",
     "\n",
-    "### [Module 2: Part two](./2_Part_2.ipynb)\n"
+    "### [Module 2: Efficient representation of multidimensional arrays](./2_Efficient_representation_of_multidimensional_arrays.ipynb)\n",
+    "\n",
+    "### [Module 3: Part 3](./3_Part_3.ipynb)\n"
    ]
   },
   {
@@ -98,13 +100,6 @@
     "\n",
     "Please use one of [these forms](https://github.com/IlyaKisil/dpm-coursework/issues/new/choose) which supports [markdown](https://guides.github.com/features/mastering-markdown/) text formatting. It would also be helpful if you include as much relevant info as possible. This could include screenshots, code snippets etc.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
