Markup for the first two modules and TOC, extended README. Started to work on the third module

--- a/notebooks/0_Table_of_contents.ipynb
+++ b/notebooks/0_Table_of_contents.ipynb
@@ -2,26 +2,56 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------\n",
+    "# **IMPORTANT**\n",
+    "\n",
+    "Please, **read very carefully** the information below if you are completing this assignment on `binder`, that is in a Cloud, and not on your personal computer.\n",
+    "\n",
+    "- Before closing this session (a binder tab in your web browser), make sure that you have downloaded the notebook that you have been working on. Otherwise, your progress might be **completely lost without any chance of restroing it**. \n",
+    "\n",
+    "<img src=\"./imgs/notebook_download.png\" alt=\"Drawing\" style=\"width: 400px;\" id=\"notebook_download\"/>\n",
+    "\n",
+    "- Do not panic if you have accidentely closed this tab. There is certain time period before binder server completely shuts down. Respectively, you should not be inactive for a long period of time without downloading the latest progress as well. You can reopen this tab either by pressing `Ctrl-Shift-T` (use `Cmd` instead of `Ctrl` for Mac) or by  clicking on the `binder` badge on [GitHub repository](https://github.com/IlyaKisil/dpm-coursework).\n",
+    "\n",
+    "- If you decided to complete assignments on `binder`, you can do so within multiple binder session (different days). When you connect to binder for the second (or any consequent) time, you will need to upload you notebook which you had previously downloaded (see Step 1). In order to do that, just drag and drop you notebook, into the file browser, as shown in the image below.\n",
+    "\n",
+    "<img src=\"./imgs/notebook_upload.png\" alt=\"Drawing\" style=\"width: 400px;\"/>\n",
+    "\n",
+    "> **NOTE:** This will replace exsiting file with the same name. If you want to keep original version of a notebook, make sure that you had duplicated it before  you uploaded your file.\n",
+    "\n",
+    "---------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "toc-hr-collapsed": false
    },
    "source": [
-    "# Table of Contents"
+    "# Table of Contents\n",
+    "\n",
+    "* [Prerequisites and materials](#Prerequisites-and-materials)\n",
+    "* [Assignments](#Assignments)\n",
+    "* [After completing assignments](#After-completing-assignments)\n",
+    "* [Submiting results](#Submiting-results)\n",
+    "* [Reporting problems and issues](#Reporting-problems-and-issues)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prerequisites and materials\n",
+    "# Prerequisites and materials\n",
     "\n",
-    "Through out this assignment you will be exposed to several python libraries:\n",
+    "Through out this assignment you will become familiar with several Python libraries:\n",
     "\n",
-    "1. [NumPy](https://docs.scipy.org/doc/numpy-1.16.1/user/index.html) - the fundamental package for scientific computing with Python.\n",
-    "2. [Matplotlib](https://matplotlib.org/) - 2D plotting library in Python and provides interface similar to MATLAB.\n",
-    "3. [HOTTBOX](https://hottbox.github.io/stable/index.html) - the toolbox for multilinear analysis and tensor decompositions. Build on top of NumPy.\n",
+    "1. [NumPy](https://docs.scipy.org/doc/numpy-1.16.1/user/index.html) - the fundamental package for scientific computing with Python,\n",
+    "2. [Matplotlib](https://matplotlib.org/) - 2D plotting library in Python which provides interface similar to MATLAB,\n",
+    "3. [HOTTBOX](https://hottbox.github.io/stable/index.html) - our own toolbox for multilinear analysis and tensor decompositions, which is built on top of NumPy.\n",
     "\n",
-    "Although, most of the tasks come with relevant code snippets and examples, you are encouraged to spend time to get familiar with these libraries."
+    "Most of the tasks will come with relevant code snippets, templates and examples, and you are also encouraged to become familiar with these libraries for your own curiousity."
    ]
   },
   {
@@ -30,11 +60,13 @@
     "toc-hr-collapsed": false
    },
    "source": [
-    "# Instructions and general guidlines\n",
+    "# Assignments\n",
     "\n",
-    "## Before completing assignments\n",
-    "It is strongly advised to prepend your Imperial ID to the filenames of notebooks with assignments. For example, if your Imperial ID is `abc123` and you want to complete assignments specified in `File_1.ipynb` then the new filename should be `abc123_File_1.ipynb`. We recommend to duplicated an existing file and then rename it.\n",
-    "    "
+    "### [Module 1: Tensors and basic operations](./1_Tensors_and_basic_operations.ipynb)\n",
+    "\n",
+    "### [Module 2: Efficient representation of multidimensional arrays](./2_Efficient_representation_of_multidimensional_arrays.ipynb)\n",
+    "\n",
+    "### [Module 3: Tucker decomposition and applications](./3_Tucker_decomposition_and_applications.ipynb)\n"
    ]
   },
   {
@@ -43,34 +75,13 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "## Completing assignments within multiple binder sessions.\n",
+    "# After completing assignments\n",
     "\n",
-    "1. Before closing binder session make sure that you have downloaded notebook on which you have been working on. This is very important, otherwise your progress will be completely lost without any chance of restroing it.\n",
+    "1. Upon completing a Jupyter notebook with assignments, make sure that all cells have been sequentially executed from the very first one. The easiest way to do so is to press `Kernel -> Restart Kernel and Run All Cells`\n",
     "\n",
-    "<img src=\"./imgs/notebook_download.png\" alt=\"Drawing\" style=\"width: 400px;\" id=\"notebook_download\"/>\n",
+    "1. Download the Jupyter notebook (see [screenshot](#notebook_download) above). If you opted for completing assignments on you own PC, then no download is required since this file is already on your computer.\n",
     "\n",
-    "2. When you connect to binder for the second/other time, you will need to upload you notebook which you had previously downloaded (see step 1). In order to do that, just drag and drop you notebook, into the file browser, as shown on image below\n",
-    "\n",
-    "<img src=\"./imgs/notebook_upload.png\" alt=\"Drawing\" style=\"width: 400px;\"/>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true
-   },
-   "source": [
-    "## Exporting and submiting results\n",
-    "\n",
-    "Before submission of `*.ipynb` file (and conversion to html), make sure that all cells have been sequentially executed from the very first one. You are required to submit:\n",
-    "\n",
-    "1. **Interactive** version of the notebooks, i.e. files with `*.ipynb` extension. \n",
-    "\n",
-    "    - If you opted for completing assignemts on `binder`, then you would need to download the final version of the notebook (see [screenshot](#notebook_download) above) and include that file in submission.    \n",
-    "    - If you opted for completing assignments on you own PC, then no download is required and you can include your local file in submission.\n",
-    "\n",
-    "\n",
-    "2. **Static** version of the notebook, i.e. files with `*.html` extension. Regardless of how you completed assignments (on binder or on your own PC), you need to export notebook as `html` file and include that file in submission.\n",
+    "1. Export the Jupyter notebook as an `*.html` file.\n",
     "\n",
     "<img src=\"./imgs/notebook_export_to_html.png\" alt=\"Drawing\" style=\"width: 1000px;\"/>\n"
    ]
@@ -78,16 +89,18 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": false
+    "toc-hr-collapsed": true
    },
    "source": [
-    "## Assignments\n",
+    "# Submiting results\n",
     "\n",
-    "### [Module 1: Tensors and basic operations](./1_Tensors_and_basic_operations.ipynb)\n",
+    "You are required to submit:\n",
     "\n",
-    "### [Module 2: Efficient representation of multidimensional arrays](./2_Efficient_representation_of_multidimensional_arrays.ipynb)\n",
+    "1. **Interactive** version of the Jupyter notebooks, i.e. files with the `*.ipynb` extension. \n",
     "\n",
-    "### [Module 3: Part 3](./3_Part_3.ipynb)\n"
+    "2. **Static** version of the Jupyter notebook, i.e. files with `*.html` extension. \n",
+    "\n",
+    "It is strongly advised to incorporate your Imperial ID into filenames of your notebooks with assignments. For example, if your Imperial ID is `abc123` and you want to complete assignments specified in `File_1.ipynb`, then the new filename should be `abc123_File_1.ipynb`. We recommend to duplicate an existing file and then rename it."
    ]
   },
   {
@@ -98,7 +111,7 @@
    "source": [
     "# Reporting problems and issues\n",
     "\n",
-    "Please use one of [these forms](https://github.com/IlyaKisil/dpm-coursework/issues/new/choose) which supports [markdown](https://guides.github.com/features/mastering-markdown/) text formatting. It would also be helpful if you include as much relevant info as possible. This could include screenshots, code snippets etc.\n"
+    "Please use one of [these forms](https://github.com/IlyaKisil/dpm-coursework/issues/new/choose) which supports [markdown](https://guides.github.com/features/mastering-markdown/) text formatting. It would also be helpful if you include as much relevant information as possible. This could include screenshots, code snippets etc.\n"
    ]
   }
  ],
