--- a/notebooks/1_Tensors_and_basic_operations.ipynb
+++ b/notebooks/1_Tensors_and_basic_operations.ipynb
@@ -48,11 +48,11 @@
    "source": [
     "<img src=\"./imgs/tensors_dogs.jpg\" alt=\"Drawing\" style=\"width: 500px;\"/>\n",
     "\n",
-    "Tensor is a multi-dimenaional array of data where each dimension is conventionally referred to as **mode**. Its order is defined by the number of its modes which is equivivalent to the number of indices required to identify a particular entry of a multi-dimensional array. For ease of visualisation and compact notation, we consider a third order tensor $\\mathbf{\\underline{X}} \\in \\mathbb{R}^{I \\times J \\times K}$. Thus, an element of a such tensor $\\mathbf{\\underline{X}} \\in \\mathbb{R}^{I \\times J \\times K}$ can be written in general form as:\n",
+    "A tensor is a multi-dimenaional array of data where each dimension is conventionally referred to as the **mode**. Tensor order is defined by the number of its modes which is equivivalent to the number of indices required to identify a particular entry of a multi-dimensional array. For ease of visualisation and compact notation, we consider a third order tensor $\\mathbf{\\underline{X}} \\in \\mathbb{R}^{I \\times J \\times K}$. Thus, an element of such a tensor, $\\mathbf{\\underline{X}} \\in \\mathbb{R}^{I \\times J \\times K}$, can be written in a general form as:\n",
     "\n",
     "$$ x_{ijk} = \\mathbf{\\underline{X}}[i, j, k]$$\n",
     "\n",
-    "> **Note:** In order to be consistent with python indexing, count of modes and elements within starts from zeros.\n",
+    "> **Note:** In order to be consistent with Python indexing, count of modes and elements within starts from zeros.\n",
     "\n",
     "Creation of a tensor starts with a formation of a multidimensional array of data."
    ]
@@ -107,10 +107,10 @@
    "source": [
     "## **Assigment 1**\n",
     "\n",
-    "1. Create a tensor of order 5 of any shape and all values equal to 5. Then calculate its Frobenious norm. \n",
-    "2. Construct several tensors of order varying from 3 to 20 with the size of each dimension equal to 2. Plot relation between order of a tensor and number of its elements.\n",
-    "3. Construct several tensors of order 3 with the size of each dimension varying from 3 to 15. Plot relation between the size of dimensions of a tensor and number of its elements.\n",
-    "4. Analyse and compare obtained graphs."
+    "1. Create a tensor of order 5 (of any shape) and with all its values equal to 5. Then, calculate its Frobenious norm. \n",
+    "2. Construct several tensors of orders varying from 3 to 20, with the size of each dimension equal to 2. Plot the relation between an order of a tensor and the number of its elements.\n",
+    "3. Construct several tensors of order 3 with the size of each dimension varying from 3 to 15. Plot the relation between the size of dimensions of a tensor and the number of its elements.\n",
+    "4. Analyse and compare the so obtained graphs."
    ]
   },
   {
@@ -212,11 +212,11 @@
     "# Most common tensor substructures\n",
     "<img src=\"./imgs/tensor_substructures.png\" alt=\"Drawing\" style=\"width: 500px;\"/>\n",
     "\n",
-    "1. A **fiber** is a vector obtained by fixing all but one of the indices, e.g.  $\\mathbf{\\underline{X}}[i,:,k]$ is the mode-2 fiber (usually refered to as row fiber). \n",
+    "1. A **fiber** is a vector obtained by fixing all but one of the indices, e.g.  $\\mathbf{\\underline{X}}[i,:,k]$ is the mode-2 fiber $\\mathbf{\\underline{X}}$ (usually refered to as row fiber). \n",
     "\n",
-    "- Fixing all but two of the indices yields a matrix called a **slice** of a tensor, e.g. $\\mathbf{\\underline{X}}[:,:,k]$ is the mode-[1,2] slice (usually refered to as frontal slice).\n",
+    "1. Fixing all but two of the indices yields a matrix called a **slice** of a tensor, e.g. $\\mathbf{\\underline{X}}[:,:,k]$ is the mode-[1,2] slice (usually refered to as the frontal slice).\n",
     "\n",
-    "**Note:** The same principals and definitions can be applied to a tensor of arbitrarily large order. On top of that, one can obtain a **subtensor** by fixing at least three indecies and let other vary."
+    "**Note:** The same principles and definitions can be applied to a tensor of an arbitrarily large order. In addition, you can obtain a **subtensor** by fixing at least three indices and letting the remaining ones vary."
    ]
   },
   {
@@ -271,8 +271,8 @@
    "source": [
     "## **Assigment 2**\n",
     "\n",
-    "1. Create a tensor of order 4, that consists of 81 elements and display all its horizontal slices and five row fibers\n",
-    "2. Create a tensor of order 3 and shape `(4,2,5)`, where values of each consequent frontal slice are doubled"
+    "1. Create a tensor of order 4 which consists of 81 elements and display all its horizontal slices and any five row fibers.\n",
+    "2. Create a tensor of order 3 and shape `(4,2,5)`, where the values of each consequent frontal slice are doubled."
    ]
   },
   {
@@ -333,11 +333,11 @@
    "source": [
     "# Unfolding\n",
     "\n",
-    "Conventionally, unfolding is considered to be a process of element mapping from a tensor to a matrix. In other words, it arranges the mode-$n$ fibers of a tensor to be the columns of the matrix and denoted as:\n",
+    "Conventionally, unfolding is considered to be a process of element mapping from a tensor to a matrix. In other words, it arranges the mode-$n$ fibers of a tensor to be the matrix columns. Thus, the mode-$n$ unfolding is denoted as:\n",
     "\n",
     "$$\\mathbf{\\underline{A}} \\xrightarrow{n} \\mathbf{A}_{(n)}$$\n",
     "\n",
-    "Thus, this operations requires to specify a mode along which a tensor will be unfolded. For a third order tensor, a visually representation of such operation is as following:\n",
+    "Thus, this operations requires to specify a mode along which a tensor will be unfolded. For a third order tensor, a visual representation of such operation is as following\n",
     "\n",
     "<img src=\"./imgs/unfolding.png\" alt=\"Drawing\" style=\"width: 600px;\"/>\n",
     "\n",
@@ -392,7 +392,7 @@
    "source": [
     "## **Assigment 3**\n",
     "\n",
-    "1. Create a tensor, $\\mathbf{\\underline{A}}$, of order 4, so that its version unfolded along the second mode would have sizes `(5,72)`, that is $\\mathbf{A}_{(n)} \\in  \\mathbb{R}^{5 \\times 72}$. Validate your results by displaying a tensor after unfolding."
+    "1. Create a tensor, $\\mathbf{\\underline{A}}$, of order 4, in such a way that its version unfolded along the second mode would have sizes `(5,72)`, that is $\\mathbf{A}_{(n)} \\in  \\mathbb{R}^{5 \\times 72}$. Validate your results by displaying the unfolded tensor."
    ]
   },
   {
@@ -429,7 +429,7 @@
     "# Mode-n product \n",
     "<img src=\"./imgs/mode_n_product.png\" alt=\"Drawing\" style=\"width: 600px;\"/>\n",
     "\n",
-    "The mode-$n$ product is the multiplication of a tensor  by a matrix along the $n^{th}$ mode of a tensor. This essentially means that each mode-$n$ fiber should be multiplied by this matrix. Mathematically, this is expressed as:\n",
+    "The mode-$n$ product is a multiplication of a tensor  by a matrix along the $n^{th}$ mode of a tensor. This essentially means that each mode-$n$ fiber should be multiplied by this matrix. Mathematically, this can be expressed as:\n",
     "\n",
     "$$\\mathbf{\\underline{X}} \\times_n \\mathbf{A} = \\mathbf{\\underline{Y}} \\quad \\Leftrightarrow  \\quad \\mathbf{Y}_{(n)} = \\mathbf{A} \\mathbf{X}_{(n)}  $$"
    ]
@@ -491,9 +491,9 @@
    "source": [
     "## **Assignment 4**\n",
     "\n",
-    "1. Perform mode-n product of a 3-rd order tensor, $\\mathbf{\\underline{X}}$, with a matrix $\\mathbf{A} \\in  \\mathbb{R}^{5 \\times 4}$ provided that the resulting tensor, $\\mathbf{\\underline{Y}}$, consists of `100` elements. Validate your results. \n",
+    "1. Perform the mode-$n$ product of a 3-rd order tensor, $\\mathbf{\\underline{X}}$, with a matrix, $\\mathbf{A} \\in  \\mathbb{R}^{5 \\times 4}$, provided that the resulting tensor, $\\mathbf{\\underline{Y}}$, consists of `100` elements. Validate your results. \n",
     "\n",
-    "> **Note:** You are incouraged to experiment with optional parameter `inplace` and to investigate its effect on the result."
+    "> **Note:** You are encouraged to experiment with the optional parameter `inplace` and to investigate its effect on the result."
    ]
   },
   {
@@ -549,7 +549,7 @@
     "\n",
     "    $$\\mathbf{\\underline{X}} \\times_n \\mathbf{A} \\times_m \\mathbf{B} = \\mathbf{\\underline{X}} \\times_m \\mathbf{B} \\times_n \\mathbf{A} \\quad (m \\neq n)$$\n",
     "\n",
-    "- However, it does not hold if the modes are the same :\n",
+    "1. However, this does not hold if the modes are the same :\n",
     "\n",
     "    $$\\mathbf{\\underline{X}} \\times_n \\mathbf{A} \\times_n \\mathbf{B} = \\mathbf{\\underline{X}} \\times_n (\\mathbf{B}\\mathbf{A})$$"
    ]
@@ -562,10 +562,10 @@
    "source": [
     "## **Assignment 5**\n",
     "\n",
-    "1. Validate both properties empirically \n",
-    "2. Prove second property analytically\n",
+    "1. Validate both of the above properties empirically \n",
+    "2. Prove the second property analytically\n",
     "\n",
-    "> **Note:** Be aware of consequences of optional parameter `inplace` (its default value is set to `True`)."
+    "> **Note:** Be aware of consequences of the optional parameter `inplace` (its default value is set to `True`)."
    ]
   },
   {
@@ -619,7 +619,7 @@
    "source": [
     "### Solution: Part 2\n",
     "\n",
-    "Use [LaTeX syntax](https://stackoverflow.com/questions/13208286/how-to-write-latex-in-ipython-notebook) for analytical deriviations for the second property below\n"
+    "Use [LaTeX syntax](https://stackoverflow.com/questions/13208286/how-to-write-latex-in-ipython-notebook) for analytical deriviations for the second property below.\n"
    ]
   },
   {
