--- a/notebooks/2_Efficient_representation_of_multidimensional_arrays.ipynb
+++ b/notebooks/2_Efficient_representation_of_multidimensional_arrays.ipynb
@@ -19,8 +19,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from hottbox.core import Tensor, TensorCPD, TensorTKD\n",
-    "from hottbox.algorithms.decomposition import CPD, HOSVD, HOOI"
+    "from hottbox.core import Tensor, TensorCPD, TensorTKD"
    ]
   },
   {
@@ -40,8 +39,7 @@
     "\n",
     "A tensor of order $N$ is said to be of **rank-1** if it can be represented as an outer product of $N$ vectors. \n",
     "\n",
-    "\n",
-    "The figure below illustrates an example of rank-1 tensor $\\mathbf{\\underline{X}}$ and provides intuition of how operation of outer product is computed:\n",
+    "The figure below illustrates an example of a rank-1 tensor $\\mathbf{\\underline{X}}$ and provides intuition on how to compute the operation of outer product:\n",
     "\n",
     "<img src=\"./imgs/outerproduct.png\" alt=\"Drawing\" style=\"width: 500px;\"/>\n"
    ]
@@ -54,13 +52,13 @@
    "source": [
     "# Kruskal representation\n",
     "\n",
-    "For a third order tensor or rank $R$ it can be expressed as follows:\n",
+    "For a third order tensor or rank $R$ the Kruskal representation can be expressed as follows:\n",
     "\n",
     "$$\n",
     "\\mathbf{\\underline{X}} = \\sum_{r=1}^R \\mathbf{\\underline{X}}_r = \\sum_{r=1}^R \\lambda_{r} \\cdot \\mathbf{a}_r \\circ \\mathbf{b}_r \\circ \\mathbf{c}_r\n",
     "$$\n",
     "\n",
-    "The vectors $\\mathbf{a}_r, \\mathbf{b}_r$ and $\\mathbf{c}_r$ are oftentime combined into corresponding **factor matrices**:\n",
+    "The vectors $\\mathbf{a}_r, \\mathbf{b}_r$ and $\\mathbf{c}_r$ are oftentime combined into the corresponding **factor matrices**:\n",
     "\n",
     "$$\n",
     "\\mathbf{A} = \\Big[ \\mathbf{a}_1 \\cdots \\mathbf{a}_R \\Big] \\quad\n",
@@ -68,17 +66,15 @@
     "\\mathbf{C} = \\Big[ \\mathbf{c}_1 \\cdots \\mathbf{c}_R \\Big] \\quad\n",
     "$$\n",
     "\n",
-    "Thus, if we employ the mode-$n$ product, the canonical polyadic representation takes form:\n",
+    "Thus, if we employ the mode-$n$ product, the **Kruskal representation** takes the form:\n",
     "\n",
     "$$\n",
     "\\mathbf{\\underline{X}} = \\mathbf{\\underline{\\Lambda}} \\times_1 \\mathbf{A} \\times_2 \\mathbf{B} \\times_3 \\mathbf{C} = \\Big[\\mathbf{\\underline{\\Lambda}}; \\mathbf{A}, \\mathbf{B}, \\mathbf{C} \\Big]\n",
     "$$\n",
     "\n",
-    "where the elements on the super-diagonal of the core tensor $\\mathbf{\\underline{\\Lambda}}$ are occupied by the values $\\lambda_r$ and all other equal to zero. This can be visualised as shown on figure below:\n",
+    "where the elements on the super-diagonal of the core tensor $\\mathbf{\\underline{\\Lambda}}$ are occupied by the values $\\lambda_r$ and all other entries are equal to zero. This can be visualised as shown on figure below:\n",
     "\n",
-    "<img src=\"./imgs/TensorCPD.png\" alt=\"Drawing\" style=\"width: 500px;\"/>\n",
-    "\n",
-    "This is the **Kryskal** representation of a tensor which is a combination of the factor matrices and core values."
+    "<img src=\"./imgs/TensorCPD.png\" alt=\"Drawing\" style=\"width: 500px;\"/>\n"
    ]
   },
   {
@@ -127,7 +123,7 @@
     "\n",
     "3. For a 3-rd order tensor that consists of 500 elements, provide three different Kruskal representations.\n",
     "\n",
-    "4. For a tensor that consits of 1000 elements, provide three Kruskal representations with each of which should have different number of factor matrices.\n",
+    "4. For a tensor that consits of 1000 elements, provide three Kruskal representations, each of which should have different number of factor matrices.\n",
     "\n",
     "5. For a 4-th order tensor that consists of 2401 elements, provide Kruskal representation if its core tensor consisting of 81 elements.\n"
    ]
@@ -286,14 +282,14 @@
    "source": [
     "<img src=\"./imgs/TensorTKD.png\" alt=\"Drawing\" style=\"width: 600px;\"/>\n",
     "\n",
-    "For a tensor $\\mathbf{\\underline{X}} \\in \\mathbb{R}^{I \\times J \\times K}$ illustrated above, the **Tucker form** represents it as a dense core tensor $\\mathbf{\\underline{G}}$ with multi-linear rank ($Q, R, P$) and a set of factor matrices $\\mathbf{A} \\in \\mathbb{R}^{I \\times Q}, \\mathbf{B} \\in \\mathbb{R}^{J \\times R}$ and $\\mathbf{C} \\in \\mathbb{R}^{K \\times P}$.\n",
+    "For a tensor $\\mathbf{\\underline{X}} \\in \\mathbb{R}^{I \\times J \\times K}$ illustrated above, the **Tucker form** represents the tensor in hand through a dense core tensor $\\mathbf{\\underline{G}}$ with multi-linear rank ($Q, R, P$) and a set of accompanying factor matrices $\\mathbf{A} \\in \\mathbb{R}^{I \\times Q}, \\mathbf{B} \\in \\mathbb{R}^{J \\times R}$ and $\\mathbf{C} \\in \\mathbb{R}^{K \\times P}$.\n",
     "\n",
     "$$\n",
     "\\mathbf{\\underline{X}} = \\sum_{q=1}^Q \\sum_{r=1}^R \\sum_{p=1}^P \\mathbf{\\underline{X}}_{qrp} = \\sum_{q=1}^Q \\sum_{r=1}^R \\sum_{p=1}^P g_{qrp} \\cdot \\mathbf{a}_q \\circ \\mathbf{b}_r \\circ \\mathbf{c}_p\n",
     "$$\n",
     "\n",
     "The Tucker form of a tensor is closely related to the Kruskal representation and can be expressed through a \n",
-    "sequence of mode-$n$ products in a similar way.\n",
+    "sequence of mode-$n$ products in a similar way, that is\n",
     "\n",
     "$$\n",
     "\\mathbf{\\underline{X}} = \\mathbf{\\underline{G}} \\times_1 \\mathbf{A} \\times_2 \\mathbf{B} \\times_3 \\mathbf{C} = \\Big[\\mathbf{\\underline{G}}; \\mathbf{A}, \\mathbf{B}, \\mathbf{C} \\Big]\n",
@@ -340,13 +336,13 @@
    "source": [
     "## **Assigment 2**\n",
     "\n",
-    "1. Core tensor of Tucker representation consists of 1848 elements. Tensors of what order can be represented in such form.\n",
+    "1. Core tensor of a Tucker representation consists of 1848 elements. Explain what tensor order should a tensor have to able to be represented in such form.\n",
     "\n",
     "2. For a 4-th order tensor that consists of 1000 elements, provide three different Tucker representations.\n",
     "\n",
-    "3. For a 3-rd order tensor that consists of 500 elements, provide three Tucker representations given that its core tensor consisting of 42 elements.\n",
+    "3. For a 3-rd order tensor that consists of 500 elements, provide three different Tucker representations given that its core tensor consists of 42 elements.\n",
     "\n",
-    "4. Provide an intuition behind the main difference between Tucker and Kruskal representations.\n"
+    "4. Provide an intuition behind the main difference between the Tucker and Kruskal representations.\n"
    ]
   },
   {
