fix(notebooks): account for updated version of hottbox

--- a/notebooks/3_Tucker_decomposition_and_applications.ipynb
+++ b/notebooks/3_Tucker_decomposition_and_applications.ipynb
@@ -19,8 +19,9 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from hottbox.core import Tensor, TensorTKD, residual_tensor\n",
+    "from hottbox.core import Tensor, TensorTKD\n",
     "from hottbox.algorithms.decomposition import HOSVD, HOOI\n",
+    "from hottbox.utils.generation import residual_tensor\n",
     "from coursework.data import get_image, plot_tensors"
    ]
   },
